--- a/newsletter_template.html
+++ b/newsletter_template.html
@@ -62,7 +62,7 @@
         }
 
         .tagline {
-            font-size: 16px;
+            font-size: 18px;
             font-weight: 400;
             color: #666666;
             margin: 4px 0 12px 0;
@@ -91,20 +91,21 @@
             border-bottom: 1px solid #e8e8e8;
             padding: 32px 40px;
             margin: 0;
+            text-align: center;
         }
 
         .sponsor-label {
-            font-size: 11px;
+            font-size: 9px;
             text-transform: uppercase;
             letter-spacing: 1px;
             color: #999;
-            margin: 0 0 12px 0;
+            margin: 0 0 8px 0;
             font-weight: 600;
         }
 
         .sponsor h3 {
-            margin: 0 0 12px 0;
-            font-size: 20px;
+            margin: 0 0 8px 0;
+            font-size: 16px;
             font-weight: 700;
             color: #000;
             line-height: 1.3;
@@ -121,9 +122,9 @@
 
         .sponsor p {
             margin: 0;
-            font-size: 16px;
-            line-height: 1.6;
-            color: #444;
+            font-size: 14px;
+            line-height: 1.5;
+            color: #666;
         }
 
         .sponsor a.cta {
@@ -216,7 +217,7 @@
 
         /* Editorial Context - NEW: Why This Matters */
         .editorial-context {
-            margin: 12px 0;
+            margin: 20px 0 12px 0;
             padding: 12px 16px;
             background: #eff6ff;
             border-left: 3px solid #3b82f6;
@@ -414,7 +415,7 @@
                     </div>
                     {% endif %}
 
-                    <p class="meta">Source: <a href="{{ article.url }}">{{ article.source }}</a></p>
+                    <p class="meta"><a href="{{ article.url }}">{{ article.source }}</a></p>
                 </div>
                 {% endfor %}
             </div>
@@ -450,7 +451,7 @@
                     <h3><a href="{{ article.url }}">{{ article.title }}</a> <span
                             style="color: #666; font-weight: 400;">({{ article.read_time_minutes }} min)</span></h3>
                     <p class="summary">{{ article.summary }}</p>
-                    <p class="meta">Source: <a href="{{ article.url }}">{{ article.source }}</a></p>
+                    <p class="meta"><a href="{{ article.url }}">{{ article.source }}</a></p>
                 </div>
                 {% endfor %}
             </div>
