--- a/newsletter_template.html
+++ b/newsletter_template.html
@@ -91,7 +91,6 @@
             border-bottom: 1px solid #e8e8e8;
             padding: 32px 40px;
             margin: 0;
-            text-align: center;
         }
 
         .sponsor-label {
@@ -99,13 +98,14 @@
             text-transform: uppercase;
             letter-spacing: 1px;
             color: #999;
-            margin: 0 0 8px 0;
+            margin: 0 0 12px 0;
             font-weight: 600;
+            text-align: center;
         }
 
         .sponsor h3 {
-            margin: 0 0 8px 0;
-            font-size: 16px;
+            margin: 0 0 12px 0;
+            font-size: 20px;
             font-weight: 700;
             color: #000;
             line-height: 1.3;
@@ -377,7 +377,8 @@
             <div class="logo">Brief</div>
             <div class="tagline">delights</div>
             <p class="date">{{ segment_name }} | {{ date }}</p>
-            <p class="curation-stats">{{ total_scanned }} scanned → {{ total_enriched }} analyzed → {{ total_selected }}
+            <p class="curation-stats">{{ total_scanned }} news scanned → {{ total_enriched }} analyzed → {{
+                total_selected }}
                 selected</p>
         </div>
 
