Fix footer branding and remove gray background
Changes:
- Update 'Enjoying Briefly?' → 'Enjoying Brief Delights?'
- Remove gray background from footer (#f8f9fa → #ffffff)
- Cleaner, more consistent brand messaging

--- a/newsletter_template.html
+++ b/newsletter_template.html
@@ -277,7 +277,7 @@
 
         /* Footer */
         .footer {
-            background: #f8f9fa;
+            background: #ffffff;
             padding: 40px;
             text-align: center;
             border-top: 1px solid #e8e8e8;
@@ -461,8 +461,8 @@
 
         <!-- Footer -->
         <div class="footer">
-            <p class="share">💌 Enjoying {{ newsletter_name|default("Briefly") }}? <a
-                    href="mailto:?subject=Check%20out%20{{ newsletter_name|default('Briefly') }}&body=I%20thought%20you'd%20find%20this%20daily%20tech%20brief%20useful">Forward
+            <p class="share">💌 Enjoying Brief Delights? <a
+                    href="mailto:?subject=Check%20out%20Brief%20Delights&body=I%20thought%20you'd%20find%20this%20daily%20tech%20brief%20useful">Forward
                     to a colleague</a></p>
 
             <p class="links">
@@ -473,7 +473,7 @@
             </p>
 
             <p class="legal">
-                You're receiving this because you subscribed to {{ newsletter_name|default("Briefly") }}.<br>
+                You're receiving this because you subscribed to Brief Delights.<br>
                 <strong>brief delights | A DreamValidator brand</strong><br>
                 © 2026 All rights reserved.<br>
                 Questions? <a href="mailto:hello@dreamvalidator.com"
