--- a/newsletter_template.html
+++ b/newsletter_template.html
@@ -459,15 +459,23 @@
         </div>
         {% endif %}
 
+        <!-- Referral Share Section -->
+        <div style="background: #f0f0ff; padding: 32px 40px; text-align: center; border-top: 2px solid #e8e8e8;">
+            <p style="font-size: 20px; font-weight: 700; margin: 0 0 8px 0; color: #000;">📬 Know someone who'd love this?</p>
+            <p style="font-size: 14px; color: #666; margin: 0 0 16px 0;">Share Brief Delights and help us grow.</p>
+            <a href="https://brief.delights.pro" style="display: inline-block; background: #000; color: #fff; padding: 12px 28px; text-decoration: none; border-radius: 8px; font-weight: 600; font-size: 14px;">Share Brief Delights →</a>
+            <p style="font-size: 12px; color: #999; margin: 16px 0 0 0;">
+                <a href="https://twitter.com/intent/tweet?text=I%20read%20Brief%20Delights%20daily%20%E2%80%94%20top%20tech%20stories%20curated%20for%20your%20role.%20Free%20%26%20no%20spam.&url=https%3A%2F%2Fbrief.delights.pro" style="color: #999; text-decoration: none; margin: 0 8px;">Twitter</a> ·
+                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fbrief.delights.pro" style="color: #999; text-decoration: none; margin: 0 8px;">LinkedIn</a> ·
+                <a href="mailto:?subject=Check%20out%20Brief%20Delights&body=I%20read%20this%20daily%20tech%20brief%20and%20thought%20you'd%20find%20it%20useful%3A%20https%3A%2F%2Fbrief.delights.pro" style="color: #999; text-decoration: none; margin: 0 8px;">Email</a>
+            </p>
+        </div>
+
         <!-- Footer -->
         <div class="footer">
-            <p class="share">💌 Enjoying Brief Delights? <a
-                    href="mailto:?subject=Check%20out%20Brief%20Delights&body=I%20thought%20you'd%20find%20this%20daily%20tech%20brief%20useful">Forward
-                    to a colleague</a></p>
-
             <p class="links">
-                <a href="{{ website_url|default('#') }}">Website</a>
-                <a href="{{ website_url|default('#') }}/about">About</a>
+                <a href="https://brief.delights.pro">Website</a>
+                <a href="https://brief.delights.pro/archive">Archive</a>
                 <a href="{{ website_url|default('#') }}/advertise">Advertise</a>
                 <a href="{{ unsubscribe_url|default('mailto:unsubscribe@briefly.com') }}">Unsubscribe</a>
             </p>
