feat: sponsor management upgrade - library, schedule, stats, newsletter injection
- New sponsor_content + sponsor_schedule Supabase tables
- CRUD APIs for sponsor content, schedule management, and stats
- Admin UI rewritten with 4 tabs: Library, Schedule, Pipeline, Stats
- Sponsor Library: create/edit modal with live preview, import from pipeline, set default
- Schedule: 7-day calendar grid with segment rows, auto-fill defaults
- Stats: per-sponsor clicks/CTR with segment breakdown
- Newsletter template: sponsor variables replace hardcoded placeholder
- send_newsletter.py: Supabase sponsor lookup + injection per segment

--- a/newsletter_template.html
+++ b/newsletter_template.html
@@ -382,14 +382,15 @@
                 selected</p>
         </div>
 
-        <!-- Sponsor (Placeholder - customize per segment) -->
+        <!-- Sponsor Section -->
+        {% if sponsor_headline %}
         <div class="sponsor">
             <p class="sponsor-label">Together With Our Sponsor</p>
-            <h3><a href="#">Your Brand Here</a></h3>
-            <p>This is where segment-specific sponsor content goes. Builders see DevOps tools, Leaders see business
-                SaaS, Innovators see AI platforms.</p>
-            <a href="#" class="cta">Learn More →</a>
+            <h3><a href="{{ sponsor_cta_url }}">{{ sponsor_headline }}</a></h3>
+            <p>{{ sponsor_description }}</p>
+            <a href="{{ sponsor_cta_url }}" class="cta">{{ sponsor_cta_text }}</a>
         </div>
+        {% endif %}
 
         <!-- Content Sections -->
         <div class="content">
@@ -461,13 +462,19 @@
 
         <!-- Referral Share Section -->
         <div style="background: #f0f0ff; padding: 32px 40px; text-align: center; border-top: 2px solid #e8e8e8;">
-            <p style="font-size: 20px; font-weight: 700; margin: 0 0 8px 0; color: #000;">📬 Know someone who'd love this?</p>
+            <p style="font-size: 20px; font-weight: 700; margin: 0 0 8px 0; color: #000;">📬 Know someone who'd love
+                this?</p>
             <p style="font-size: 14px; color: #666; margin: 0 0 16px 0;">Share Brief Delights and help us grow.</p>
-            <a href="https://brief.delights.pro" style="display: inline-block; background: #000; color: #fff; padding: 12px 28px; text-decoration: none; border-radius: 8px; font-weight: 600; font-size: 14px;">Share Brief Delights →</a>
+            <a href="https://brief.delights.pro"
+                style="display: inline-block; background: #000; color: #fff; padding: 12px 28px; text-decoration: none; border-radius: 8px; font-weight: 600; font-size: 14px;">Share
+                Brief Delights →</a>
             <p style="font-size: 12px; color: #999; margin: 16px 0 0 0;">
-                <a href="https://twitter.com/intent/tweet?text=I%20read%20Brief%20Delights%20daily%20%E2%80%94%20top%20tech%20stories%20curated%20for%20your%20role.%20Free%20%26%20no%20spam.&url=https%3A%2F%2Fbrief.delights.pro" style="color: #999; text-decoration: none; margin: 0 8px;">Twitter</a> ·
-                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fbrief.delights.pro" style="color: #999; text-decoration: none; margin: 0 8px;">LinkedIn</a> ·
-                <a href="mailto:?subject=Check%20out%20Brief%20Delights&body=I%20read%20this%20daily%20tech%20brief%20and%20thought%20you'd%20find%20it%20useful%3A%20https%3A%2F%2Fbrief.delights.pro" style="color: #999; text-decoration: none; margin: 0 8px;">Email</a>
+                <a href="https://twitter.com/intent/tweet?text=I%20read%20Brief%20Delights%20daily%20%E2%80%94%20top%20tech%20stories%20curated%20for%20your%20role.%20Free%20%26%20no%20spam.&url=https%3A%2F%2Fbrief.delights.pro"
+                    style="color: #999; text-decoration: none; margin: 0 8px;">Twitter</a> ·
+                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fbrief.delights.pro"
+                    style="color: #999; text-decoration: none; margin: 0 8px;">LinkedIn</a> ·
+                <a href="mailto:?subject=Check%20out%20Brief%20Delights&body=I%20read%20this%20daily%20tech%20brief%20and%20thought%20you'd%20find%20it%20useful%3A%20https%3A%2F%2Fbrief.delights.pro"
+                    style="color: #999; text-decoration: none; margin: 0 8px;">Email</a>
             </p>
         </div>
 
