--- a/newsletter_template.html
+++ b/newsletter_template.html
@@ -463,13 +463,12 @@
         {% endif %}
 
         <!-- Personalized Referral Section -->
+        {% raw %}
         <div style="background: #f8f7ff; padding: 32px 40px; text-align: center; border-top: 2px solid #e8e8e8;">
             <p style="font-size: 22px; font-weight: 700; margin: 0 0 4px 0; color: #000;">🎯 Share Brief Delights,
                 Unlock Rewards</p>
             <p style="font-size: 14px; color: #666; margin: 0 0 20px 0;">You've referred <strong
-                    style="color: #4f46e5;">{{ referral_count }}</strong> reader{{ referral_count_plural }}. {{
-                referral_remaining }} more to unlock: <strong>{{ referral_next_reward }}</strong>
-            </p>
+                    style="color: #4f46e5;">{{ referral_count }}</strong> reader{{ referral_count_plural }}. {{ referral_remaining }} more to unlock: <strong>{{ referral_next_reward }}</strong></p>
 
             <!-- Milestone Progress Bar -->
             <div style="max-width: 400px; margin: 0 auto 20px auto;">
@@ -509,6 +508,22 @@
                 <a href="mailto:?subject=Check%20out%20Brief%20Delights&body=I%20read%20this%20daily%20tech%20brief%20and%20thought%20you'd%20find%20it%20useful%3A%20https%3A%2F%2Fbrief.delights.pro%2F%3Fref%3D{{ referral_code }}"
                     style="color: #666; text-decoration: none; margin: 0 8px; font-weight: 500;">📧 Email</a>
             </p>
+        </div>
+        {% endraw %}
+
+        <!-- Feedback Rating -->
+        <div style="background: #ffffff; padding: 28px 40px; text-align: center; border-top: 1px solid #e8e8e8;">
+            <p style="font-size: 15px; font-weight: 600; color: #000; margin: 0 0 4px 0;">How was today's Brief?</p>
+            <p style="font-size: 12px; color: #999; margin: 0 0 16px 0;">Your feedback shapes tomorrow's edition</p>
+            <div style="font-size: 28px;">
+                <a href="https://brief.delights.pro/feedback?rating=loved&date={{ date }}&segment={{ segment_name.split()[0]|lower|default('builders') }}"
+                    style="text-decoration: none; margin: 0 12px;">🔥</a>
+                <a href="https://brief.delights.pro/feedback?rating=good&date={{ date }}&segment={{ segment_name.split()[0]|lower|default('builders') }}"
+                    style="text-decoration: none; margin: 0 12px;">👍</a>
+                <a href="https://brief.delights.pro/feedback?rating=meh&date={{ date }}&segment={{ segment_name.split()[0]|lower|default('builders') }}"
+                    style="text-decoration: none; margin: 0 12px;">😐</a>
+            </div>
+            <p style="font-size: 11px; color: #bbb; margin: 8px 0 0 0;">Loved it · Good · Meh</p>
         </div>
 
         <!-- Footer -->
